传输规范导入导出功能